# fekv

./: .gitignore  Cargo.toml  LICENSE  README.md  dump_entries.py  example.sh  load_words.py
examples/five_mem_node/: main.rs
examples/single_mem_node/: main.rs
src/: handlers.rs  lib.rs  main.rs  raftstore.rs  store.rs
src/kvstore/: diskstore.rs  memstore.rs  mod.rs
src/store/: diskstore.rs  memstore.rs  mod.rs
src/test/: main.rs
